# manage_minyan

./: .env.sample  .env.save  .gitignore  README.md  config.py  config_test.py  credentials.json  cron_job.py  dateInfo.txt  email_id.yaml  email_messages.py  env.py  get_shabbos_times.py  last_call.py  log.txt  manage_minyan.py  on_friday.py  on_monday.py  on_thursday.py  pyproject.toml  quickstart.py  quickstart_test.py  test.py  tet.py  token.pickle  use_env_example.py  yaml_dict.py  yaml_dict_test.py
apis/: heb_cal.py  sessions.py
